[package]
name = "tender_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.13.1", features = ["cookies", "form"]}
tokio = {version = "1.49.0", features = ["full"]}
futures = {version = "0.3.31", default-features = false}
scraper = "0.25.0"
chrono = {version = "0.4.43", features = ["serde"]}
serde = {version = "1.0.228", features = ["derive"]}
postcard = {version = "1.1.3", features = ["alloc"]}
serde_json = "1.0.149"
native-dialog = {version = "0.9.4", features = ["windows_dpi_awareness", "windows_visual_styles"]}
lettre = {version = "0.11.19", features = ["serde"]}
